# sql-mcp

./: .env.example  .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: configuration.md  connections.md  development.md  docker.md  dsn-formats.md  getting-started.md  index.md  installation.md  security.md  tools.md
docs/imgs/: PALETTE.md
docs/stylesheets/: extra.css
examples/: connections.json  multi_connection.json  single_mssql.json
scripts/: Dockerfile  docker-compose.yml  seed_databases.py
src/sql_mcp/: cli.py  health.py  logging_config.py  metrics.py  models.py  registry.py  security.py  server.py  tools.py  utils.py
src/sql_mcp/adapters/: __init__.py  base.py  databricks.py  fabric.py  mongodb.py  mssql.py  mysql.py  postgres.py  sqlite.py
tests/: conftest.py  test_adapter_databricks.py  test_adapter_fabric.py  test_adapter_mongodb.py  test_adapter_mssql.py  test_adapter_mysql.py  test_adapter_postgres.py  test_adapter_sqlite.py  test_registry.py  test_security.py  test_tools.py
