[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-mcp"
version = "3.0.0"
description = "Universal Database MCP — SQL, MongoDB, Databricks, Fabric and more"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Lorenzo Uriel", email = "lorenzouriel394@gmail.com" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "sql-server",
    "postgresql",
    "mysql",
    "sqlite",
    "mongodb",
    "databricks",
    "fabric",
    "database",
    "claude",
    "ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.1",
    "prometheus-client>=0.20.0",
    "uvicorn>=0.30.0",
    "pymongo>=4.16.0",
]

[project.optional-dependencies]
mssql      = ["pyodbc>=4.0.35"]
postgres   = ["psycopg2-binary>=2.9.0"]
mysql      = ["mysql-connector-python>=8.0.0"]
mongodb    = ["pymongo>=4.6.0"]
databricks = ["databricks-sql-connector>=3.0.0"]
fabric     = ["pyodbc>=4.0.35", "azure-kusto-data>=4.0.0"]
all        = [
    "pyodbc>=4.0.35",
    "psycopg2-binary>=2.9.0",
    "mysql-connector-python>=8.0.0",
    "pymongo>=4.6.0",
    "databricks-sql-connector>=3.0.0",
    "azure-kusto-data>=4.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "testcontainers[postgres,mysql]>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.scripts]
sql-mcp = "sql_mcp.cli:run"

[project.urls]
Homepage = "https://github.com/lorenzouriel/universal-db-mcp"
Repository = "https://github.com/lorenzouriel/universal-db-mcp.git"
"Bug Tracker" = "https://github.com/lorenzouriel/universal-db-mcp/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src/sql_mcp --cov-report=term-missing"

[tool.pytest.ini_options.markers]
integration = "marks tests that require live database containers"
